# Do-Anime-Profile-Pictures-Code-Better

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/public/: README.md
notebooks/: 01_anime_classification.ipynb  02_classification_validation.ipynb  03_github_eda.ipynb  04_github_statistical_test.ipynb  05_codeforces_collection.ipynb  06_codeforces_analysis.ipynb
src/: device.py
src/analysis/: geo.py
src/classification/: __init__.py  classifier.py
src/collectors/: __init__.py  async_github_client.py  contributions.py  enricher.py  github_client.py  rate_limit.py  sampler.py  trendshift_scraper.py
src/images/: __init__.py  downloader.py  prefilter.py
src/pipeline/: __init__.py  cli.py  runner.py
