[project]
name = "anime-pfp-coders"
version = "1.0.0"
description = "Do anime PFP developers actually code better? A data-driven investigation across GitHub & Codeforces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "aiohttp",
    "pandas",
    "numpy",
    "tqdm",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "plotly",
    "scipy",
    "umap-learn",
    "ipykernel",
    "torch>=2.0.0",
    "pillow>=10.0.0",
    "streamlit>=1.30.0",
    "ultralytics>=8.0.0",
    "python-dotenv>=1.0.0",
    "ipywidgets>=8.1.8",
    "open-clip-torch>=2.24.0",
    "openpyxl>=3.1.5",
]

[project.scripts]
collect = "pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/images", "src/collectors", "src/classification", "src/pipeline"]

[tool.hatch.build.targets.wheel.force-include]
"src/device.py" = "device.py"

[tool.ruff]
line-length = 100
